crates/keron-lang/tests/corpus/errors/check/duplicate_union_variant.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: duplicate variant `"on"`
  --> 1:28
  |
1 | type Mode = "on" | "off" | "on"
  |                            ^^^^
